[Qt][WK2] Focus out is not handled properly https://bugs.webkit.org/show_bug.cgi?id=96997

Patch by Michael Brüning <michael.bruning@digia.com> on 2012-09-25
Reviewed by Simon Hausmann.

Adds a handler for QQuickWebView::itemChange event that is sent to
QQuickItems when their focus has been changed to replace focusOutEvent.

This fixes the problem because the focus has been updated when
itemChange is called, while it is not yet update when focusOutEvent
is called.

* UIProcess/API/qt/qquickwebview.cpp: Removed focusOutEvent.
(QQuickWebView::itemChange): Added in place of focusOutEvent.
* UIProcess/API/qt/qquickwebview_p.h:
* UIProcess/qt/QtWebPageEventHandler.cpp:
(WebKit::QtWebPageEventHandler::handleFocusLost): Renamed from handleFocusOutEvent, parameter removed.
* UIProcess/qt/QtWebPageEventHandler.h:
(QtWebPageEventHandler):

Canonical link: https://commits.webkit.org/115515@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129496 268f45cc-cd09-0410-ab3c-d52691b4dbfc